Implementación de las validaciones del front al back
